--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <body>
         <h1>Robot Controls:</h1>
         <div class="center">
-            <button onclick="goFoward()"><span>&#8679</span></button>
-            <button onclick="goBack()"><span>&#8681</span></button>
-            <button onclick="turnRight()"><span>&#8680</span></button>
-            <button onclick="turnLeft()"><span>&#8678</span></button>
-            <button onclick="stop()"><span>&#9936</span></button>
+            <button onclick="robo('Forward')"><span>&#8679</span></button>
+            <button onclick="robo('Back')"><span>&#8681</span></button>
+            <button onclick="robo('Right')"><span>&#8680</span></button>
+            <button onclick="robo('Left')"><span>&#8678</span></button>
+            <button onclick="robo('Stop')"><span>&#9936</span></button>
         </div>
        
     </body>
