changed some stuff

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
     <body>
         <h1>Robot Controls:</h1>
+        <div id="buttons">
+            <button onclick="robo('Green')">GREEN</button>
+            <button onclick="robo('Blue')">BLUE</button>
+            <button onclick="robo('Red')">RED</button>
+        </div>
+
         <div class="center">
             <button onclick="robo('Forward')"><span>&#8679</span></button>
             <button onclick="robo('Back')"><span>&#8681</span></button>
@@ -21,7 +27,5 @@
             <button onclick="robo('Left')"><span>&#8678</span></button>
             <button onclick="robo('Stop')"><span>&#9936</span></button>
         </div>
-       
     </body>
-
 </html>
