lights on/off with mouseup mousedown

--- a/index.html
+++ b/index.html
@@ -45,22 +45,28 @@
             left: 25%;
             width: 100%;
         }
-    </style>
-    <script src="functions.js"></script>
+    </style>    
+        <script src="functions.js">
+    </script>
 </head>
     <body>
         <h1>Robot Controls:</h1>
         <div id="buttons">
-            <button onclick="robo('Green')">GREEN</button>
-            <button onclick="robo('Blue')">BLUE</button>
-            <button onclick="robo('Red')">RED</button>
+            <button onmousedown="robo('Green', 1)", onmouseup="robo('Green')">GREEN</button>
+            <button onmousedown="robo('Blue', 1)", onmouseup="robo('Blue')">BLUE</button>
+            <button onmousedown="robo('Red', 1)", onmouseup="robo('Red')">RED</button>
         </div>
         <div class="center">
-            <button onclick="robo('Forward')"><span>&#8679</span></button>
-            <button onclick="robo('Back')"><span>&#8681</span></button>
-            <button onclick="robo('Right')"><span>&#8680</span></button>
-            <button onclick="robo('Left')"><span>&#8678</span></button>
-            <button onclick="robo('Stop')"><span>&#9936</span></button>
+            <button onmousedown="robo('Forward')", onmouseup="robo('Stop')">
+                <span>&#8679</span></button>
+            <button onmousedown="robo('Back')", onmouseup="robo('Stop')">
+                <span>&#8681</span></button>
+            <button onmousedown="robo('Right')", onmouseup="robo('Stop')">
+                <span>&#8680</span></button>
+            <button onmousedown="robo('Left')", onmouseup="robo('Stop')">
+                <span>&#8678</span></button>
+            <button onmouseup="robo('Stop')", onmouseup="robo('Stop')">
+                <span>&#9936</span></button>
         </div>
     </body>
 </html>
